--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div class="w-screen font-jakarta   sm:bg-[#EBECF2] flex">
+<div class="w-screen font-jakarta   sm:bg-[#EBECF2] dark:bg-gray-500 flex">
 
-<app-sidenavcomponent id="default-sidebar"  class="sm:w-[6%] md:h-[876px] bg-[#FAFAFA] sm:relative font-jakarta border-r py-[20px] gap-[10px]  sm:flex flex-col justify-between fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0"></app-sidenavcomponent>
+<app-sidenavcomponent id="default-sidebar"  class="sm:w-[6%] md:h-[876px] bg-[#FAFAFA] dark:bg-gray-800 sm:relative font-jakarta border-r py-[20px] gap-[10px]  sm:flex flex-col justify-between fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0"></app-sidenavcomponent>
 
 <!--end of main body div -->
 <router-outlet ></router-outlet>
